tests/rosetta/out/C/9-billion-names-of-god-the-integer.error
cc: exit status 1
/tmp/9-billion-names-of-god-the-integer.c: In function ‘bigFromInt’:
/tmp/9-billion-names-of-god-the-integer.c:117:14: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  117 |     digits = 0;
      |              ^
/tmp/9-billion-names-of-god-the-integer.c: In function ‘bigAdd’:
/tmp/9-billion-names-of-god-the-integer.c:137:11: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  137 |     res = 0;
      |           ^
/tmp/9-billion-names-of-god-the-integer.c: In function ‘bigSub’:
/tmp/9-billion-names-of-god-the-integer.c:161:11: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  161 |     res = 0;
      |           ^
/tmp/9-billion-names-of-god-the-integer.c: In function ‘cumu’:
/tmp/9-billion-names-of-god-the-integer.c:190:12: error: redefinition of ‘cache_data’
  190 |   list_int cache_data[] = {cache};
      |            ^~~~~~~~~~
/tmp/9-billion-names-of-god-the-integer.c:188:12: note: previous definition of ‘cache_data’ with type ‘list_int[1]’
  188 |   list_int cache_data[] = {bigFromInt(1)};
      |            ^~~~~~~~~~
/tmp/9-billion-names-of-god-the-integer.c:190:28: error: incompatible types when initializing type ‘int’ using type ‘list_list_int’
  190 |   list_int cache_data[] = {cache};
      |                            ^~~~~
/tmp/9-billion-names-of-god-the-integer.c:191:17: error: redefinition of ‘cache’
  191 |   list_list_int cache = {1, cache_data};
      |                 ^~~~~
/tmp/9-billion-names-of-god-the-integer.c:189:17: note: previous definition of ‘cache’ with type ‘list_list_int’
  189 |   list_list_int cache = {1, cache_data};
      |                 ^~~~~
/tmp/9-billion-names-of-god-the-integer.c:198:22: error: invalid initializer
  198 |       list_int val = cache.data[y - x].data[minInt(x, y - x)];
      |                      ^~~~~
/tmp/9-billion-names-of-god-the-integer.c:205:13: error: incompatible types when assigning to type ‘list_list_int’ from type ‘int’
  205 |     cache = 0;
      |             ^
/tmp/9-billion-names-of-god-the-integer.c:208:20: error: incompatible types when returning type ‘list_int’ but ‘list_list_int’ was expected
  208 |   return cache.data[n];
      |          ~~~~~~~~~~^~~
/tmp/9-billion-names-of-god-the-integer.c: In function ‘_mochi_main’:
/tmp/9-billion-names-of-god-the-integer.c:250:13: error: incompatible types when initializing type ‘int’ using type ‘list_list_int’
  250 |     int r = cumu(num);
      |             ^~~~
/tmp/9-billion-names-of-god-the-integer.c:253:53: error: request for member ‘data’ in something not a structure or union
  253 |     char *tmp16 = concat_string(tmp15, bigToString(r.data[_count(r) - 1]));
      |                                                     ^
/tmp/9-billion-names-of-god-the-integer.c:253:66: error: incompatible type for argument 1 of ‘_count’
  253 |     char *tmp16 = concat_string(tmp15, bigToString(r.data[_count(r) - 1]));
      |                                                                  ^
      |                                                                  |
      |                                                                  int
/tmp/9-billion-names-of-god-the-integer.c:74:28: note: expected ‘list_int’ but argument is of type ‘int’
   74 | static int _count(list_int v) { return v.len; }
      |                   ~~~~~~~~~^
/tmp/9-billion-names-of-god-the-integer.c:256:53: error: request for member ‘data’ in something not a structure or union
  256 |     char *tmp19 = concat_string(tmp18, bigToString(r.data[_count(r) - 1]));
      |                                                     ^
/tmp/9-billion-names-of-god-the-integer.c:256:66: error: incompatible type for argument 1 of ‘_count’
  256 |     char *tmp19 = concat_string(tmp18, bigToString(r.data[_count(r) - 1]));
      |                                                                  ^
      |                                                                  |
      |                                                                  int
/tmp/9-billion-names-of-god-the-integer.c:74:28: note: expected ‘list_int’ but argument is of type ‘int’
   74 | static int _count(list_int v) { return v.len; }
      |                   ~~~~~~~~~^
/tmp/9-billion-names-of-god-the-integer.c:257:14: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
  257 |     printf("%d\n", tmp19);
      |             ~^     ~~~~~
      |              |     |
      |              int   char *
      |             %s
